大型アップデート 環境設定追加、多重読み対策
- 多重読みする可能性があるのを修正 (前のリクエストが終了前にタイマーでリクエスト発行された場合)
- プロンプトを変更して、上が最新と勘違いされないようにするなどの対策をした
- 環境設定ダイアログを追加
  - APIキーなどをiniファイルに記憶するようにした
  - モデルを切り替えできるようにした
  - プロンプト、棒読みちゃんのURLパラメーターを変更できるようにした
- 名前を全く、もしくは連続で読まない設定を追加した
- その他もろもろ調整

--- a/IriamCommentReader/IriamCommentReader.csproj
+++ b/IriamCommentReader/IriamCommentReader.csproj
@@ -56,6 +56,12 @@
       <DependentUpon>AreaSelector.cs</DependentUpon>
     </Compile>
     <Compile Include="BouyomiTalk.cs" />
+    <Compile Include="FormPreference.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPreference.Designer.cs">
+      <DependentUpon>FormPreference.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,9 +69,13 @@
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
     <Compile Include="GeminiAPI.cs" />
+    <Compile Include="Preference.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AreaSelector.resx" />
+    <EmbeddedResource Include="FormPreference.resx">
+      <DependentUpon>FormPreference.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
